homework2/standard_vector_add_hls_component/vector_add/logs/hls_run_csim_381306.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output /scratch/tsussman/standard_vector_add_hls_component/vector_add/vector_add.hlsrun_csim_summary, at Fri Mar 27 12:50:57 2026
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir /scratch/tsussman/standard_vector_add_hls_component/vector_add -config /scratch/tsussman/standard_vector_add_hls_component/standard_vector_add_hls_config.cfg -cmdlineconfig /scratch/tsussman/standard_vector_add_hls_component/vector_add/hls/config.cmdline
INFO: [HLS 200-10] For user 'tsussman' on host 'login04.hep.wisc.edu' (Linux_x86_64 version 6.1.166-1.el9.elrepo.x86_64) on Fri Mar 27 12:51:04 CDT 2026
INFO: [HLS 200-10] On os "AlmaLinux release 9.7 (Moss Jungle Cat)"
INFO: [HLS 200-10] In directory '/scratch/tsussman/standard_vector_add_hls_component'
INFO: [HLS 200-2005] Using work_dir /scratch/tsussman/standard_vector_add_hls_component/vector_add 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/scratch/tsussman/homework2/standard_vector_add.cpp' from /scratch/tsussman/standard_vector_add_hls_component/standard_vector_add_hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/scratch/tsussman/homework2/standard_vector_add.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/scratch/tsussman/homework2/standard_vector_add_tb.cpp' from /scratch/tsussman/standard_vector_add_hls_component/standard_vector_add_hls_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file '/scratch/tsussman/homework2/standard_vector_add_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=vector_add' from /scratch/tsussman/standard_vector_add_hls_component/standard_vector_add_hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from /scratch/tsussman/standard_vector_add_hls_component/standard_vector_add_hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xcvu13p-fsga2577-2-e' from /scratch/tsussman/standard_vector_add_hls_component/standard_vector_add_hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xcvu13p-fsga2577-2-e'
INFO: [HLS 200-1465] Applying ini 'clock=25ns' from /scratch/tsussman/standard_vector_add_hls_component/standard_vector_add_hls_config.cfg(10)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 25ns.
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from /scratch/tsussman/standard_vector_add_hls_component/standard_vector_add_hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../homework2/standard_vector_add_tb.cpp in debug mode
   Compiling ../../../../../homework2/standard_vector_add.cpp in debug mode
../../../../../homework2/standard_vector_add.cpp:7:13: error: use of undeclared identifier 'C'
            C[i] = A[i] + B[i];
            ^
../../../../../homework2/standard_vector_add.cpp:7:20: error: use of undeclared identifier 'A'
            C[i] = A[i] + B[i];
                   ^
../../../../../homework2/standard_vector_add.cpp:7:27: error: use of undeclared identifier 'B'
            C[i] = A[i] + B[i];
                          ^
3 errors generated.
make: *** [csim.mk:93: obj/standard_vector_add.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 8.25 seconds. Total CPU system time: 1.57 seconds. Total elapsed time: 9.47 seconds; peak allocated memory: 293.402 MB.
